--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DBService.cs" />
     <Compile Include="IDBService.cs" />
     <Compile Include="Models\Interazione.cs" />
+    <Compile Include="Models\UtenteS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
