--- a/ProgettoAP/ProgettoAP.csproj
+++ b/ProgettoAP/ProgettoAP.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Registrazione.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Registrazione.Designer.cs">
+      <DependentUpon>Registrazione.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Ceo_organizzazioni.cs" />
     <Compile Include="Models\Controller.cs" />
     <Compile Include="Models\Sessione.cs" />
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Registrazione.resx">
+      <DependentUpon>Registrazione.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
