--- a/ProgettoAP/ProgettoAP.csproj
+++ b/ProgettoAP/ProgettoAP.csproj
@@ -68,6 +68,12 @@
     <Compile Include="Forms\Registrazione.Designer.cs">
       <DependentUpon>Registrazione.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\UserForm\FormListaEventi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UserForm\FormListaEventi.Designer.cs">
+      <DependentUpon>FormListaEventi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Ceo_organizzazioni.cs" />
     <Compile Include="Models\Controller.cs" />
     <Compile Include="Models\Sessione.cs" />
@@ -79,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Registrazione.resx">
       <DependentUpon>Registrazione.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserForm\FormListaEventi.resx">
+      <DependentUpon>FormListaEventi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,8 +108,12 @@
     <None Include="Connected Services\ServiceReference\item2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\ServiceReference\item3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\DataSources\Server.Models.Ceo_organizzazioniS.datasource" />
     <None Include="Properties\DataSources\Server.Models.UtenteS.datasource" />
+    <None Include="Properties\DataSources\System.Data.DataTable.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
